Bump versions to beta.1
GitOrigin-RevId: d9fb3a7e92c05a0835c65b03e45492df5f9c9034